--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Box</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <section class="banner">
+      <div class="container_first">
+        <div class="banner__left">
+          <div class="banner__left__textarea">
+            <div>
+              <img src="image/logo.png" alt="logo" />
+            </div>
+            <div>
+              <h1 class="">
+                The best place to build, test, and discover front-end code.
+              </h1>
+            </div>
+          </div>
+          <div>
+            <p>
+              CodePen is a social development environment for front-end
+              designers and developers. Build and deploy a website, show off
+              your work, build test cases to learn and debug, and find
+              inspiration.
+            </p>
+          </div>
+          <div>
+            <button>Sign Up for Free</button>
+          </div>
+        </div>
+        <div class="banner__right">
+          <div class="banner__right__cards">
+            <div class="banner__right__cards--card_one">
+              <div class="banner__right__cards--card_one--head">
+                <div>
+                  <span><i class="fas fa-cog"></i></span>
+                  <h1>HTML</h1>
+                </div>
+                <div><i class="fas fa-angle-down"></i></div>
+              </div>
+            </div>
+            <div class="banner__right__cards--card_two"></div>
+            <div class="banner__right__cards--card_three"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
