added left section

--- a/index.html
+++ b/index.html
@@ -43,11 +43,24 @@
           <div class="banner__right__cards">
             <div class="banner__right__cards--card_one">
               <div class="banner__right__cards--card_one--head">
-                <div>
+                <div class="banner__right__cards--card_one--head--left">
                   <span><i class="fas fa-cog"></i></span>
                   <h1>HTML</h1>
                 </div>
-                <div><i class="fas fa-angle-down"></i></div>
+                <div class="banner__right__cards--card_one--head--right">
+                  <span><i class="fas fa-angle-down"></i></span>
+                </div>
+              </div>
+              <div class="banner__right__cards--card_one--code">
+                <code
+                  ><span class="HeaderHero-module_cr-fFw5b">&lt;div</span>
+                  <span class="HeaderHero-module_cy-8gEKF">class</span
+                  ><span class="HeaderHero-module_cy-Dfic4">=</span
+                  ><span class="HeaderHero-module_cg-SDmKV">"rect"</span
+                  ><span class="HeaderHero-module_cr-fFw5b"
+                    >&gt;&lt;/div&gt;</span
+                  ></code
+                >
               </div>
             </div>
             <div class="banner__right__cards--card_two"></div>
